--- a/src/main/resources/Views/loginStage.fxml
+++ b/src/main/resources/Views/loginStage.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="loginPane" prefHeight="462.0" prefWidth="361.0" stylesheets="@../Styles/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.loginController">
+<BorderPane fx:id="loginPane" prefHeight="462.0" prefWidth="361.0" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.loginStageController">
    <top>
-      <HBox fx:id="windowsBar" alignment="CENTER_RIGHT" onMouseDragged="#dragged" onMousePressed="#pressed" style="-fx-background-color: #57606f;" BorderPane.alignment="CENTER">
+      <HBox fx:id="windowsBar" alignment="CENTER_RIGHT" onMouseDragged="#dragged" onMousePressed="#pressed" styleClass="windowsBar" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
@@ -24,15 +24,15 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
          <children>
-            <FontAwesomeIconView fill="#45dbfb" glyphName="MINUS" onMouseClicked="#minus" size="1.5em" styleClass="FontAwesomeIconView">
+            <FontAwesomeIconView glyphName="MINUS" onMouseClicked="#minus" size="1.5em" styleClass="Icons">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin></FontAwesomeIconView>
-            <FontAwesomeIconView fill="#1dd1a1" glyphName="CIRCLE" size="1.5em" styleClass="FontAwesomeIconView">
+            <FontAwesomeIconView glyphName="CIRCLE" size="1.5em" styleClass="Icons">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin></FontAwesomeIconView>
-            <FontAwesomeIconView fill="#ee5253" glyphName="CLOSE" onMouseClicked="#close" size="1.5em" styleClass="FontAwesomeIconView">
+            <FontAwesomeIconView glyphName="CLOSE" onMouseClicked="#close" size="1.5em" styleClass="Icons">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin></FontAwesomeIconView>
@@ -40,7 +40,7 @@
       </HBox>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" styleClass="loginPane" BorderPane.alignment="CENTER">
          <children>
             <AnchorPane>
                <children>
@@ -52,20 +52,25 @@
                </children></AnchorPane>
             <AnchorPane>
                <children>
-                  <VBox layoutX="70.0" layoutY="-9.0" spacing="50.0" stylesheets="@../Styles/myTextFieldsStyles.css">
+                  <MaterialDesignIconView fx:id="account" fill="#f5f5f5" glyphName="ACCOUNT" layoutX="130.0" layoutY="89.0" size="100" text="" wrappingWidth="102.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane>
+               <children>
+                  <VBox layoutX="70.0" layoutY="-9.0" spacing="50.0">
                      <children>
-                        <Label text="Usuario:" />
-                        <TextField id="userTxtField" fx:id="userTxtField" prefHeight="23.0" prefWidth="181.0" styleClass="login-text-fields">
+                        <Label styleClass="loginText" text="Usuario:" textFill="WHITE" />
+                        <TextField id="userTxtField" fx:id="userTxtField" prefHeight="23.0" prefWidth="181.0" styleClass="loginTextField">
                            <VBox.margin>
                               <Insets top="-50.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label text="Contraseña:">
+                        <Label styleClass="loginText" text="Contraseña:" textFill="WHITE">
                            <VBox.margin>
                               <Insets top="-40.0" />
                            </VBox.margin>
                         </Label>
-                        <PasswordField id="passwordTxtField" fx:id="passwordTxtField" prefHeight="27.0" prefWidth="227.0" styleClass="login-text-fields">
+                        <PasswordField id="passwordTxtField" fx:id="passwordTxtField" prefHeight="27.0" prefWidth="227.0" styleClass="loginTextField">
                            <VBox.margin>
                               <Insets top="-50.0" />
                            </VBox.margin>
@@ -83,14 +88,9 @@
                   <Insets />
                </VBox.margin>
             </AnchorPane>
-            <AnchorPane>
-               <children>
-                  <MaterialDesignIconView fx:id="account" fill="#f5f5f5" glyphName="ACCOUNT" layoutX="130.0" layoutY="89.0" size="100" text="" wrappingWidth="102.0" />
-               </children>
-            </AnchorPane>
             <AnchorPane prefHeight="96.0" prefWidth="361.0">
                <children>
-                  <Button fx:id="loginBtn" layoutX="114.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#checkLogin" prefHeight="52.0" prefWidth="133.0" styleClass="login-window-buttons" stylesheets="@../styles/style.css" text="Ingresar!" />
+                  <Button fx:id="loginBtn" layoutX="114.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#checkLogin" prefHeight="52.0" prefWidth="133.0" styleClass="loginButton" stylesheets="@../Styles/styleDEMO.css" text="Ingresar!" />
                </children>
             </AnchorPane>
          </children>
