--- a/src/main/resources/Views/mainStage.fxml
+++ b/src/main/resources/Views/mainStage.fxml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-
-<BorderPane fx:controller="Controller.mainStageController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../Styles/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
-   </center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.mainStageController">
    <top>
-      <HBox fx:id="windowsBar" alignment="CENTER_RIGHT" style="-fx-background-color: #57606f;" BorderPane.alignment="CENTER">
+      <HBox fx:id="windowsBar" alignment="CENTER_RIGHT" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="40.0" prefWidth="1280.0" styleClass="windowsBar" BorderPane.alignment="CENTER">
          <children>
-            <FontAwesomeIconView fill="#45dbfb" glyphName="MINUS" onMouseClicked="#minus" size="1.4em" styleClass="FontAwesomeIconView">
+            <FontAwesomeIconView glyphName="MINUS" onMouseClicked="#minus" size="1.4em" styleClass="Icons" HBox.hgrow="ALWAYS">
                <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
             </FontAwesomeIconView>
-            <FontAwesomeIconView fill="#1dd1a1" glyphName="CIRCLE" size="1.4em" styleClass="FontAwesomeIconView" text="">
+            <FontAwesomeIconView glyphName="CIRCLE" size="1.4em" styleClass="Icons" text="">
                <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
             </FontAwesomeIconView>
-            <FontAwesomeIconView fill="#ee5253" glyphName="CLOSE" onMouseClicked="#close" size="1.4em" styleClass="FontAwesomeIconView">
+            <FontAwesomeIconView glyphName="CLOSE" onMouseClicked="#close" size="1.4em" styleClass="Icons">
                <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
             </FontAwesomeIconView>
          </children>
@@ -35,4 +36,55 @@
          </padding>
       </HBox>
    </top>
+   <left>
+      <AnchorPane maxHeight="680.0" maxWidth="300.0" prefHeight="680.0" prefWidth="300.0" styleClass="navBar" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="91.0" fitWidth="91.0" layoutX="21.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Images/MatrakazoIcon.png" />
+               </image>
+            </ImageView>
+            <Text layoutX="142.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Cinemas EL MatraKazo" wrappingWidth="116.22265625" />
+            <Button alignment="BASELINE_LEFT" layoutX="2.0" layoutY="205.0" mnemonicParsing="false" onMouseClicked="#inicioButton" prefHeight="65.0" prefWidth="300.0" text="Inicio" textAlignment="CENTER">
+               <graphic>
+                  <MaterialDesignIconView glyphName="VIEW_DASHBOARD" styleClass="Icons" wrappingWidth="34.0" />
+               </graphic>
+            </Button>
+            <Text layoutX="52.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="welcomeText" text="Bienvenido, DewinU!" />
+            <Button alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#menuButton" prefHeight="65.0" prefWidth="300.0" text="Menu">
+               <graphic>
+                  <MaterialDesignIconView glyphName="FOOD" styleClass="Icons" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="340.0" mnemonicParsing="false" onMouseClicked="#facturaButton" prefHeight="65.0" prefWidth="300.0" text="Nueva Factura">
+               <graphic>
+                  <MaterialDesignIconView glyphName="TICKET_CONFIRMATION" styleClass="Icons" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="270.0" mnemonicParsing="false" onMouseClicked="#historyButton" prefHeight="65.0" prefWidth="300.0" text="Historial">
+               <graphic>
+                  <MaterialDesignIconView glyphName="HISTORY" styleClass="Icons" />
+               </graphic>
+            </Button>
+            <Button alignment="CENTER" graphicTextGap="14.0" layoutX="2.0" layoutY="603.0" mnemonicParsing="false" onMouseClicked="#logoutButton" prefHeight="65.0" prefWidth="300.0" text="Cerrar sesión">
+               <graphic>
+                  <MaterialDesignIconView glyphName="LOGOUT" styleClass="Icons" text="" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="150.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#peliculasButton" prefHeight="65.0" prefWidth="150.0" text="Películas">
+               <graphic>
+                  <FontAwesomeIconView glyphName="FILE_MOVIE_ALT" styleClass="Icons" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="2.0" layoutX="5.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#empleadosButton" prefHeight="65.0" prefWidth="147.0" text="Empleados">
+               <graphic>
+                  <MaterialDesignIconView glyphName="ACCOUNT" styleClass="Icons" />
+               </graphic>
+            </Button>
+         </children>
+      </AnchorPane>
+   </left>
+   <center>
+      <AnchorPane fx:id="contentPane" maxHeight="680.0" maxWidth="980.0" prefHeight="680.0" prefWidth="980.0" styleClass="dashBoard" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
