--- a/src/main/resources/Views/dashboardStage.fxml
+++ b/src/main/resources/Views/dashboardStage.fxml
@@ -1,10 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="contentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="980.0" styleClass="dashBoard" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.dashboardStageController">
    <children>
-      <Text layoutX="391.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acá Va el Inicio ó Dashboard(Randall)" />
+      <HBox layoutX="67.0" layoutY="51.0" prefHeight="251.0" prefWidth="848.0">
+         <children>
+            <VBox alignment="CENTER" prefHeight="251.0" prefWidth="151.0" stylesheets="@../Styles/styleDEMO.css">
+               <children>
+                  <ImageView fx:id="peliculas1" fitHeight="249.0" fitWidth="212.0" onMouseClicked="#selectingMovie" pickOnBounds="true" preserveRatio="true" styleClass="movie-pane">
+                     <image>
+                        <Image url="@../Images/riseoftheplanetoftheapes_movie_movies_movies_movie_7655.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="71.0" prefWidth="294.0" text="El planeta de los simios">
+                     <font>
+                        <Font name="FontAwesome Regular" size="17.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox prefHeight="251.0" prefWidth="151.0" stylesheets="@../Styles/styleDEMO.css">
+               <children>
+                  <ImageView fx:id="peliculas2" fitHeight="249.0" fitWidth="212.0" pickOnBounds="true" preserveRatio="true" styleClass="movie-pane">
+                     <image>
+                        <Image url="@../Images/riseoftheplanetoftheapes_movie_movies_movies_movie_7655.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="56.0" prefWidth="212.0" stylesheets="@../Styles/styleDEMO.css" text="El planeta de los simios">
+                     <font>
+                        <Font name="FontAwesome Regular" size="17.0" />
+                     </font></Label>
+               </children>
+            </VBox>
+            <VBox prefHeight="251.0" prefWidth="151.0">
+               <children>
+                  <ImageView fx:id="peliculas3" fitHeight="249.0" fitWidth="212.0" pickOnBounds="true" preserveRatio="true" styleClass="movie-pane">
+                     <image>
+                        <Image url="@../Images/riseoftheplanetoftheapes_movie_movies_movies_movie_7655.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="56.0" prefWidth="212.0" styleClass="movie-name" stylesheets="@../Styles/styleDEMO.css" text="El planeta de los simios">
+                     <font>
+                        <Font name="FontAwesome Regular" size="17.0" />
+                     </font></Label>
+               </children>
+            </VBox>
+            <VBox layoutX="434.0" layoutY="10.0" prefHeight="251.0" prefWidth="151.0">
+               <children>
+                  <ImageView fx:id="peliculas4" fitHeight="249.0" fitWidth="212.0" pickOnBounds="true" preserveRatio="true" styleClass="movie-pane">
+                     <image>
+                        <Image url="@../Images/riseoftheplanetoftheapes_movie_movies_movies_movie_7655.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="56.0" prefWidth="212.0" styleClass="movie-name" stylesheets="@../Styles/styleDEMO.css" text="El planeta de los simios">
+                     <font>
+                        <Font name="FontAwesome Regular" size="17.0" />
+                     </font></Label>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <HBox layoutX="66.0" layoutY="378.0" prefHeight="229.0" prefWidth="767.0">
+         <children>
+            <VBox alignment="CENTER" prefHeight="100.0" prefWidth="91.0">
+               <children>
+                  <ImageView fx:id="peliculas5" fitHeight="212.0" fitWidth="218.0" pickOnBounds="true" preserveRatio="true" styleClass="movie-pane">
+                     <image>
+                        <Image url="@../Images/The_Avengers_32401.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="175.0" text="Los vergadores">
+                     <font>
+                        <Font name="FontAwesome Regular" size="17.0" />
+                     </font></Label>
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="91.0">
+               <children>
+                  <ImageView fx:id="peliculas6" fitHeight="212.0" fitWidth="395.0" pickOnBounds="true" preserveRatio="true" styleClass="movie-pane">
+                     <image>
+                        <Image url="@../Images/The_Avengers_32401.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="175.0" text="Los vergadores">
+                     <font>
+                        <Font name="FontAwesome Regular" size="17.0" />
+                     </font></Label>
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="91.0">
+               <children>
+                  <ImageView fx:id="peliculas7" fitHeight="212.0" fitWidth="395.0" pickOnBounds="true" preserveRatio="true" styleClass="movie-pane">
+                     <image>
+                        <Image url="@../Images/The_Avengers_32401.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="175.0" text="Los vergadores">
+                     <font>
+                        <Font name="FontAwesome Regular" size="17.0" />
+                     </font></Label>
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" layoutX="222.0" layoutY="10.0" prefHeight="100.0" prefWidth="91.0">
+               <children>
+                  <ImageView fx:id="peliculas8" fitHeight="212.0" fitWidth="395.0" pickOnBounds="true" preserveRatio="true" styleClass="movie-pane">
+                     <image>
+                        <Image url="@../Images/The_Avengers_32401.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="175.0" text="Los vergadores">
+                     <font>
+                        <Font size="17.0" />
+                     </font></Label>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
