--- a/src/main/resources/Views/mainStage.fxml
+++ b/src/main/resources/Views/mainStage.fxml
@@ -4,6 +4,9 @@
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -37,54 +40,66 @@
       </HBox>
    </top>
    <left>
-      <AnchorPane maxHeight="680.0" maxWidth="300.0" prefHeight="680.0" prefWidth="300.0" styleClass="navBar" BorderPane.alignment="CENTER">
+      <AnchorPane maxHeight="685.0" maxWidth="300.0" prefHeight="685.0" prefWidth="296.0" styleClass="navBar" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="91.0" fitWidth="91.0" layoutX="21.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="99.0" fitWidth="261.0" layoutX="22.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Images/MatrakazoIcon.png" />
+                  <Image url="@../Images/Logo.png" />
                </image>
             </ImageView>
-            <Text layoutX="142.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Cinemas EL MatraKazo" wrappingWidth="116.22265625" />
-            <Button alignment="BASELINE_LEFT" layoutX="2.0" layoutY="205.0" mnemonicParsing="false" onMouseClicked="#inicioButton" prefHeight="65.0" prefWidth="300.0" text="Inicio" textAlignment="CENTER">
+            <Button fx:id="inicioButton" alignment="BASELINE_LEFT" layoutX="2.0" layoutY="205.0" mnemonicParsing="false" onMouseClicked="#inicioButton" prefHeight="65.0" prefWidth="300.0" text="Inicio" textAlignment="CENTER">
                <graphic>
                   <MaterialDesignIconView glyphName="VIEW_DASHBOARD" styleClass="Icons" wrappingWidth="34.0" />
                </graphic>
             </Button>
-            <Text layoutX="52.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="welcomeText" text="Bienvenido, DewinU!" />
-            <Button alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#menuButton" prefHeight="65.0" prefWidth="300.0" text="Menu">
+            <Text fx:id="welcomeText" layoutX="52.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="welcomeText" text="Bienvenido, DewinU!" />
+            <Button fx:id="menuButton" alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#menuButton" prefHeight="65.0" prefWidth="300.0" text="Menu">
                <graphic>
                   <MaterialDesignIconView glyphName="FOOD" styleClass="Icons" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="340.0" mnemonicParsing="false" onMouseClicked="#facturaButton" prefHeight="65.0" prefWidth="300.0" text="Nueva Factura">
+            <Button fx:id="facturaButton" alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="340.0" mnemonicParsing="false" onMouseClicked="#facturaButton" prefHeight="65.0" prefWidth="300.0" text="Nueva Factura">
                <graphic>
                   <MaterialDesignIconView glyphName="TICKET_CONFIRMATION" styleClass="Icons" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="270.0" mnemonicParsing="false" onMouseClicked="#historyButton" prefHeight="65.0" prefWidth="300.0" text="Historial">
+            <Button fx:id="historyButton" alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="2.0" layoutY="270.0" mnemonicParsing="false" onMouseClicked="#historyButton" prefHeight="65.0" prefWidth="300.0" text="Historial">
                <graphic>
                   <MaterialDesignIconView glyphName="HISTORY" styleClass="Icons" />
                </graphic>
             </Button>
-            <Button alignment="CENTER" graphicTextGap="14.0" layoutX="2.0" layoutY="603.0" mnemonicParsing="false" onMouseClicked="#logoutButton" prefHeight="65.0" prefWidth="300.0" text="Cerrar sesión">
+            <Button fx:id="logoutButton" alignment="CENTER" graphicTextGap="14.0" layoutX="2.0" layoutY="603.0" mnemonicParsing="false" onMouseClicked="#logoutButton" prefHeight="65.0" prefWidth="300.0" text="Cerrar sesión">
                <graphic>
                   <MaterialDesignIconView glyphName="LOGOUT" styleClass="Icons" text="" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="150.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#peliculasButton" prefHeight="65.0" prefWidth="150.0" text="Películas">
+            <Button fx:id="peliculasButton" alignment="BASELINE_LEFT" graphicTextGap="14.0" layoutX="150.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#peliculasButton" prefHeight="65.0" prefWidth="150.0" text="Películas">
                <graphic>
                   <FontAwesomeIconView glyphName="FILE_MOVIE_ALT" styleClass="Icons" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="2.0" layoutX="5.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#empleadosButton" prefHeight="65.0" prefWidth="147.0" text="Empleados">
+            <Button fx:id="empleadosButton" alignment="BASELINE_LEFT" graphicTextGap="2.0" layoutX="5.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#empleadosButton" prefHeight="65.0" prefWidth="147.0" text="Empleados">
                <graphic>
                   <MaterialDesignIconView glyphName="ACCOUNT" styleClass="Icons" />
                </graphic>
             </Button>
+            <AnchorPane fx:id="AnchorPaneNUevaFactura" layoutY="161.0" prefHeight="521.0" prefWidth="302.0" styleClass="navBar" visible="false">
+               <children>
+                  <Button fx:id="cancelarFacturaButtom" layoutX="65.0" layoutY="469.0" mnemonicParsing="false" onAction="#cancelarFacturaButtomOnAction" style="-fx-background-color: gray;" text="Cancelar Factura" />
+                  <TextField layoutX="139.0" layoutY="95.0" />
+                  <TextField layoutX="139.0" layoutY="155.0" />
+                  <ListView layoutX="5.0" layoutY="283.0" prefHeight="172.0" prefWidth="144.0" />
+                  <ListView layoutX="151.0" layoutY="283.0" prefHeight="172.0" prefWidth="144.0" />
+                  <Label layoutX="37.0" layoutY="252.0" text="Asientos" />
+                  <Label layoutX="187.0" layoutY="252.0" text="Comida" />
+                  <Label layoutX="52.0" layoutY="93.0" text="Fecha" />
+                  <Label layoutX="50.0" layoutY="153.0" text="hora" />
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane fx:id="contentPane" maxHeight="680.0" maxWidth="980.0" prefHeight="680.0" prefWidth="980.0" styleClass="dashBoard" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="contentPane" maxHeight="680.0" maxWidth="981.0" prefHeight="680.0" prefWidth="981.0" styleClass="dashBoard" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
