--- a/src/main/resources/Styles/styleDEMO.css
+++ b/src/main/resources/Styles/styleDEMO.css
@@ -100,15 +100,23 @@
 
 }
 
+.movie-frame {
+    -fx-border-color: #78808d;
+    -fx-border-width: 0.5px;
+}
+
 .movie-pane {
     -fx-background-insets: 10;
     -fx-background-radius: 10;
-    -fx-effect: dropshadow(three-pass-box, #403d39, 20, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, #403d39, 40, 0.5, 0, 0);
 }
 
 .movie-pane:hover {
     -fx-cursor: hand;
 }
 
+.unselected-movie {
+    -fx-effect: dropshadow(three-pass-box, #403d39, 40, 0.5, 0, 0);
+}
 
 
