--- a/src/main/resources/Views/facturaStage.fxml
+++ b/src/main/resources/Views/facturaStage.fxml
@@ -20,7 +20,7 @@
           <TreeTableColumn prefWidth="200.0" text="Películas" />
         </columns>
       </TreeTableView>
-      <Pane layoutX="226.0" layoutY="14.0" prefHeight="656.0" prefWidth="740.0" style="-fx-background-color: darkred;">
+      <Pane fx:id="pnlBotonesAsientos" layoutX="226.0" layoutY="14.0" opacity="0.0" prefHeight="656.0" prefWidth="740.0" style="-fx-background-color: darkred;" visible="false">
          <children>
             <Label layoutX="7.0" layoutY="5.0" text="SALA A" textFill="WHITE">
                <font>
@@ -676,6 +676,14 @@
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
+      <ImageView fx:id="imgSelectorAsientosPrincipal" fitHeight="61.0" fitWidth="328.0" layoutX="460.0" layoutY="310.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Images/Selector%20de%20imagen.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
