--- a/src/main/resources/Views/peliculasStage.fxml
+++ b/src/main/resources/Views/peliculasStage.fxml
@@ -1,10 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
+<?import de.jensd.fx.glyphs.octicons.OctIconView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="contentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="980.0" styleClass="dashBoard" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.peliculasStageController">
-    <children>
-        <Text layoutX="391.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acá Va la Administración de Películas(Dewin)" />
-    </children>
+   <children>
+      <TableView fx:id="carteleraView" layoutX="51.0" layoutY="477.0" prefHeight="106.0" prefWidth="583.0">
+        <columns>
+            <TableColumn prefWidth="47.0" text="N°" />
+            <TableColumn prefWidth="86.0" text="Titulo" />
+            <TableColumn prefWidth="83.0" text="Director" />
+            <TableColumn prefWidth="89.0" text="Duración" />
+            <TableColumn prefWidth="83.0" text="Funciones" />
+            <TableColumn prefWidth="87.0" text="Clasificación" />
+            <TableColumn prefWidth="127.0" text="En Cartelera" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Label layoutX="51.0" layoutY="445.0" text="Actualmente en caltelera!" />
+      <Label layoutX="51.0" layoutY="35.0" text="Películas totales" />
+      <TableView fx:id="moviesView" layoutX="51.0" layoutY="57.0" prefHeight="294.0" prefWidth="583.0">
+        <columns>
+          <TableColumn prefWidth="47.0" text="N°" />
+          <TableColumn prefWidth="86.0" text="Titulo" />
+            <TableColumn prefWidth="83.0" text="Director" />
+            <TableColumn prefWidth="89.0" text="Duración" />
+            <TableColumn prefWidth="83.0" text="Funciones" />
+            <TableColumn prefWidth="87.0" text="Clasificación" />
+            <TableColumn prefWidth="127.0" text="En Cartelera" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Separator layoutX="674.0" layoutY="20.0" orientation="VERTICAL" prefHeight="641.0" prefWidth="0.0" />
+      <ImageView fitHeight="225.0" fitWidth="201.0" layoutX="741.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="701.0" layoutY="277.0" text="Titulo: " />
+      <Label layoutX="698.0" layoutY="306.0" text="Duración:" />
+      <Label layoutX="698.0" layoutY="332.0" text="Género:" />
+      <Label layoutX="700.0" layoutY="360.0" text="Director:" />
+      <Text layoutX="779.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <Text layoutX="779.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <Text layoutX="779.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <Label layoutX="701.0" layoutY="385.0" text="Descripción:" />
+      <Text layoutX="779.0" layoutY="551.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <TextArea layoutX="779.0" layoutY="385.0" prefHeight="92.0" prefWidth="162.0" />
+      <Label layoutX="707.0" layoutY="484.0" text="Funciones:" />
+      <Text layoutX="779.0" layoutY="497.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <Text layoutX="779.0" layoutY="527.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <Text layoutX="779.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="T" wrappingWidth="162.13671875" />
+      <Label layoutX="709.0" layoutY="565.0" text="En carltelera desde:" />
+      <Label layoutX="709.0" layoutY="589.0" text="hasta:" />
+      <Text layoutX="830.0" layoutY="578.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="134.99999403953552" />
+      <Text layoutX="830.0" layoutY="602.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="134.99999403953552" />
+      <Button layoutX="161.0" layoutY="364.0" mnemonicParsing="false" onMouseClicked="#buttonNew" text="Nuevo">
+         <graphic>
+            <OctIconView glyphName="DIFF_ADDED" />
+         </graphic>
+      </Button>
+      <Button layoutX="319.0" layoutY="364.0" mnemonicParsing="false" onMouseClicked="#buttonEdit" text="Editar">
+         <graphic>
+            <FontAwesomeIconView glyphName="EDIT" />
+         </graphic>
+      </Button>
+      <Button layoutX="461.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#buttonDelete" text="Eliminar">
+         <graphic>
+            <MaterialDesignIconView glyphName="DELETE" />
+         </graphic>
+      </Button>
+   </children>
 </AnchorPane>
