--- a/src/main/resources/Views/peliculasStage.fxml
+++ b/src/main/resources/Views/peliculasStage.fxml
@@ -15,31 +15,30 @@
 
 <AnchorPane fx:id="contentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="980.0" styleClass="dashBoard" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.peliculasStageController">
    <children>
-      <TableView fx:id="carteleraView" layoutX="51.0" layoutY="477.0" prefHeight="106.0" prefWidth="583.0">
+      <TableView fx:id="carteleraView" layoutX="51.0" layoutY="430.0" prefHeight="225.0" prefWidth="583.0">
         <columns>
-            <TableColumn prefWidth="47.0" text="N°" />
-            <TableColumn prefWidth="86.0" text="Titulo" />
-            <TableColumn prefWidth="83.0" text="Director" />
-            <TableColumn prefWidth="89.0" text="Duración" />
-            <TableColumn prefWidth="83.0" text="Funciones" />
-            <TableColumn prefWidth="87.0" text="Clasificación" />
-            <TableColumn prefWidth="127.0" text="En Cartelera" />
+            <TableColumn fx:id="cartelera_ID" prefWidth="47.0" text="N°" />
+            <TableColumn fx:id="cartelera_TITULO" prefWidth="86.0" text="Titulo" />
+            <TableColumn fx:id="cartelera_DIRECTOR" prefWidth="83.0" text="Director" />
+            <TableColumn fx:id="cartelera_DIRECTOR" prefWidth="89.0" text="Duración" />
+            <TableColumn fx:id="cartelera_FUNCIONES" prefWidth="83.0" text="Funciones" />
+            <TableColumn fx:id="cartelera_CLASIFICACION" prefWidth="87.0" text="Clasificación" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Label layoutX="51.0" layoutY="445.0" text="Actualmente en caltelera!" />
+      <Label layoutX="51.0" layoutY="394.0" text="Actualmente en caltelera!" />
       <Label layoutX="51.0" layoutY="35.0" text="Películas totales" />
-      <TableView fx:id="moviesView" layoutX="51.0" layoutY="57.0" prefHeight="294.0" prefWidth="583.0">
+      <TableView fx:id="moviesView" layoutX="51.0" layoutY="57.0" prefHeight="263.0" prefWidth="583.0">
         <columns>
-          <TableColumn prefWidth="47.0" text="N°" />
-          <TableColumn prefWidth="86.0" text="Titulo" />
-            <TableColumn prefWidth="83.0" text="Director" />
-            <TableColumn prefWidth="89.0" text="Duración" />
-            <TableColumn prefWidth="83.0" text="Funciones" />
-            <TableColumn prefWidth="87.0" text="Clasificación" />
-            <TableColumn prefWidth="127.0" text="En Cartelera" />
+          <TableColumn fx:id="pelicula_ID" prefWidth="47.0" text="N°" />
+          <TableColumn fx:id="pelicula_TITULO" prefWidth="86.0" text="Titulo" />
+            <TableColumn fx:id="pelicula_DIRECTOR" prefWidth="83.0" text="Director" />
+            <TableColumn fx:id="pelicula_DURACION" prefWidth="89.0" text="Duración" />
+            <TableColumn fx:id="pelicula_FUNCIONES" prefWidth="83.0" text="Funciones" />
+            <TableColumn fx:id="pelicula_CLASIFICACION" prefWidth="87.0" text="Clasificación" />
+            <TableColumn fx:id="pelicula_CARTELERA" prefWidth="127.0" text="En Cartelera" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -65,17 +64,17 @@
       <Label layoutX="709.0" layoutY="589.0" text="hasta:" />
       <Text layoutX="830.0" layoutY="578.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="134.99999403953552" />
       <Text layoutX="830.0" layoutY="602.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="134.99999403953552" />
-      <Button layoutX="161.0" layoutY="364.0" mnemonicParsing="false" onMouseClicked="#buttonNew" text="Nuevo">
+      <Button layoutX="166.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#buttonNew" text="Nuevo">
          <graphic>
             <OctIconView glyphName="DIFF_ADDED" />
          </graphic>
       </Button>
-      <Button layoutX="319.0" layoutY="364.0" mnemonicParsing="false" onMouseClicked="#buttonEdit" text="Editar">
+      <Button layoutX="311.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#buttonEdit" text="Editar">
          <graphic>
             <FontAwesomeIconView glyphName="EDIT" />
          </graphic>
       </Button>
-      <Button layoutX="461.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#buttonDelete" text="Eliminar">
+      <Button layoutX="467.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#buttonDelete" text="Eliminar">
          <graphic>
             <MaterialDesignIconView glyphName="DELETE" />
          </graphic>
