--- a/src/main/resources/Views/dashboardStage.fxml
+++ b/src/main/resources/Views/dashboardStage.fxml
@@ -200,12 +200,12 @@
       </HBox>
       <ImageView fx:id="cartelera" fitHeight="87.0" fitWidth="82.0" layoutX="72.0" layoutY="27.0" onMouseClicked="#comeBackToCartelera" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Images/iconmonstr-home-7-240.png" />
+            <Image url="@../Images/home.png" />
          </image>
       </ImageView>
       <ImageView fx:id="previousMovie" fitHeight="91.0" fitWidth="89.0" layoutX="41.0" layoutY="584.0" onMouseClicked="#goToPreviousMovie" pickOnBounds="true">
          <image>
-            <Image url="@../Images/iconmonstr-undo-4-240.png" />
+            <Image url="@../Images/Previous.png" />
          </image>
       </ImageView>
    </children>
