--- a/src/main/resources/Styles/styleDEMO.css
+++ b/src/main/resources/Styles/styleDEMO.css
@@ -173,4 +173,9 @@
     -fx-opacity: 200;
 }
 
+.util-buttons-used:hover {
+    -fx-effect: dropshadow(gaussian, #bbc2c9, 5, 0.5, 0, 0);
+    -fx-cursor: hand;
+}
+
 
